fixing layout problem on mobile

--- a/src/components/MainSite.css
+++ b/src/components/MainSite.css
@@ -6,136 +6,7 @@ body {
     overflow-x: hidden;
 }
 
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
-}
 
-/* HTML5 display-role reset for older browsers */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-    display: block;
-}
-
-body {
-    line-height: 1;
-}
-
-ol,
-ul {
-    list-style: none;
-}
-
-blockquote,
-q {
-    quotes: none;
-}
-
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-    content: '';
-    content: none;
-}
-
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
-}
 
 #container {
     /* display: flex; */
@@ -290,7 +161,9 @@ footer {
 
 /* footer */
 footer {
-    position: relative;
+    position: absolute;
+    box-sizing: border-box;
+    width: calc(100vw - 10px);
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -299,7 +172,7 @@ footer {
     height: 30px;
 
     /* background-color: red; */
-    height: 50px;
+    height: 80px;
     /* padding: 30px; */
     padding: 15px;
     letter-spacing: 2px;
@@ -314,6 +187,9 @@ footer .copyright {
     margin: 0;
     z-index: 21221;
     color: rgb(128, 79, 79);
+    /* margin-top: 20px; */
+    /* background-color: green; */
+    /* height: 30px; */
 }
 
 footer ul.social {
@@ -342,6 +218,7 @@ footer ul.rules {
     list-style-type: none;
     margin: 0;
     padding: 0;
+    /* background-color: blue; */
 }
 
 footer ul.rules li {
@@ -577,6 +454,7 @@ div.terms h1.termsTitle {
         flex-direction: column;
         /* background-color: red; */
         width: 300px;
+
     }
 
     footer ul.social li.language {
@@ -671,10 +549,16 @@ div.terms h1.termsTitle {
 
     }
 
+    footer ul.social {
+        /* width: 40%; */
+    }
+
     footer ul.social li {
         font-size: 13px;
+        /* width: 40%; */
         /* text-align: right; */
-        /* padding: 0; */
+        padding: 0;
+
 
     }
 }
