--- a/src/components/Pagination.css
+++ b/src/components/Pagination.css
@@ -18,11 +18,12 @@ div.pagination {
     display: flex;
     /* margin-top: 100px; */
     /* height: 120vh; */
-    height: 1100px;
+    /* height: 1100px; */
     flex-wrap: wrap;
     justify-content: space-between;
     /* position: relative; */
     /* background-color: pink; */
+    /* height: 3000px; */
 
 }
 
@@ -51,7 +52,7 @@ li.siteList {
 }
 
 li.siteList li {
-    /* background-color: pink; */
+
     /* font-size: 22px;
     margin: 0 8px;
     text-align: center;
@@ -76,13 +77,14 @@ li.siteList li:last-of-type {
     position: absolute;
     bottom: 0;
     left: 4%;
+
 }
 
 li.pagiNation div {
     /* background-color: yellow; */
     width: 33.333%;
     height: 50%;
-
+    /* background-color: grey; */
 }
 
 li.pagiNation {
@@ -90,7 +92,7 @@ li.pagiNation {
     width: 100%;
     height: 100%;
     flex-wrap: wrap;
-
+    /* background-color: rgb(195, 95, 95); */
 
 
 }
@@ -102,6 +104,7 @@ li.pagiNation div div {
     transform: translateX(-50%);
     width: 65%;
     height: 430px;
+    background-color: rgb(195, 95, 95);
     /* background-color: #fff; */
     /* border-radius: 10px; */
     /* box-shadow: 0 5px 10px rgba(0, 0, 0, 0.30), 0 5px 8px rgba(0, 0, 0, 0.22); */
@@ -111,6 +114,7 @@ li.pagiNation div div {
     transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
 
     background: white;
+    /* background-color: rgb(195, 95, 95); */
     overflow: hidden;
 
 }
@@ -122,6 +126,7 @@ li.pagiNation div div:hover {
 
 li.pagiNation div div {
     position: relative;
+    /* background-color: green; */
 
 }
 
@@ -184,6 +189,7 @@ h1.products {
 @media only screen and (max-width: 910px) {
     .promotionSection .wrapper {
         width: 600px;
+        /* height: 1350px; */
     }
 
     li.pagiNation div {
@@ -218,6 +224,7 @@ h1.products {
 
     .promotionSection .wrapper {
         width: 350px;
+        /* height: 2800px; */
     }
 
     li.pagiNation div {
